# Ai-Employee

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEMO_SCRIPT.md  LESSONS_LEARNED.md  Personal AI Employee Hackathon 0_ Building Autonomous FTEs in 2026.md  README.md  audit_logger.py  audit_logic.py  cloud_agent.py  dashboard_server.py  demo_video.html  ecosystem.config.js  gmail_auth.py  orchestrator.py  permission_guard.py  process_watchdog.py  pyproject.toml  rate_limiter.py  retry_handler.py  scheduler.py  secrets_manager.py  supervisord.conf
.claude/: mcp.json  settings.json
.claude/hooks/: stop_hook.py
AI_Employee_Vault/: .gitignore  .gmail_processed_ids.json  .linkedin_posts_today.json  .whatsapp_processed_ids.json  Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Accounting/: Bank_Transactions.md  Current_Month.md  Rates.md  known_payees.json
AI_Employee_Vault/Approved/: ACTION_facebook_confirm_email_20260303.md  APPROVAL_cancel_sub_Adobe_Creative_Cloud_20260306.md  APPROVAL_cancel_sub_ClickUp_Business_20260306.md  APPROVAL_cancel_sub_GitHub_Copilot_20260306.md  APPROVAL_cancel_sub_HubSpot_Starter_CRM_20260306.md  APPROVAL_whatsapp_20260306T201527Z.md  APPROVAL_whatsapp_20260307T173050Z.md  APPROVAL_whatsapp_20260307T190539Z.md
AI_Employee_Vault/Briefings/: 2026-02-25_Monday_Briefing.md  2026-03-02_Monday_Briefing.md  2026-03-09_Monday_Briefing.md
AI_Employee_Vault/Contacts/: known_contacts.json  opt_out_human_only.json
AI_Employee_Vault/Done/: ALERT_expired_INVOICE_500.md  ALERT_google_security_20260303.md  ALERT_invoice_approval_expired.md  ALERT_security_notifications_2026-02-24.md  ALERT_sla_EMAIL_20260224T152935Z_Re__Send_January_Invoice___Invoice_INV-2.md  ALERT_sla_EMAIL_20260224T152935Z_Security_alert.md  ALERT_sla_EMAIL_20260224T152936Z_Security_alert.md  ALERT_sla_EMAIL_20260224T152937Z_Ausbildung_KI-Manager_in_inkl__Zertifika.md  ALERT_sla_EMAIL_20260224T152937Z_Confirm_your_business_email_address.md  ALERT_sla_EMAIL_20260224T152937Z_Welcome_to_ngrok_.md  ALERT_sla_EMAIL_20260224T152938Z_Security_alert.md  ALERT_sla_EMAIL_20260224T173640Z_World_Digital__you_ve_got_a_new_match_on.md  ALERT_sla_EMAIL_20260306T160244Z_Upload_your_resume_to_unlock_work_offers.md  ALERT_sla_EMAIL_demo_client_inquiry_20260226.md  ALERT_sla_EMAIL_demo_invoice_request_20260226.md  ALERT_sla_EMAIL_demo_newsletter_20260226.md  ALERT_sla_EMAIL_invoice_client.md  ALERT_sla_breach_client_email.md  APPROVAL_whatsapp_Test_User_20260302.md  APPROVAL_whatsapp_World_Digital_20260227.md  APPROVAL_whatsapp_World_Digital_20260302.md  APPROVAL_whatsapp_World_Digital_DEMO_invoice.md  EMAIL_20260224T042311Z_The_features_you_love__on_demand.md  EMAIL_20260224T042312Z_Designs_that_speak_to_you___.md  EMAIL_20260224T042312Z_From_woundedsunries_and_others__3_unread.md  EMAIL_20260224T042312Z_Inklings__The_QuillBot_newsletter___.md  EMAIL_20260224T042313Z_Become_unstoppable__Sandleen___sale_on_n.md  EMAIL_20260224T042313Z_World_Digital__you_ve_got_a_new_match_on.md  EMAIL_20260224T042313Z_reddoorgraphicofficial__see_reddoorgraph.md  EMAIL_20260224T042314Z_Associate__AR_Service_Delivery__Direct__.md  EMAIL_20260224T042314Z_Hi_World__welcome_to_Google_AI_Studio.md  EMAIL_20260224T042314Z_reddoorgraphicofficial__see_what_s_been_.md  (+121 more)
cloud/: health_monitor.py  setup_cloud.sh  setup_odoo.sh
dashboard-ui/: middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
mcp_servers/: audit_mcp_server.py  banking_mcp_server.py  calendar_mcp_server.py  email_mcp_server.py  gmail_mcp_server.py  odoo_mcp_server.py  slack_mcp_server.py  social_mcp_server.py  whatsapp_mcp_server.py
scripts/: setup_local_pm2.sh
sync/: setup_vault_sync.sh  sync_down.sh  sync_up.sh
systemd/: ai-employee-local.service  ai-employee-scheduler.service
templates/: dashboard.html
watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  social_watcher.py  whatsapp_watcher.py
(+118 files in other folders)
